[project]
name = "veteran_bot"
version = "0.1.0"
description = "Telegram bot for veterans in Dnipro region"
authors = ["Your Name <you@example.com>"]
dependencies = [
    "aiogram>=3.7.0",
    "aiohttp>=3.9.5",
    "beautifulsoup4>=4.12.3"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"